--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -288,21 +288,21 @@ For the importance light sampling function, we need to loop through the lights a
     <tr align="center">
       <td>
         <img src="part3_CBbunny_l1.png" align="middle" width="200px"/>
-        <figcaption>1 Light Ray (example1.dae)</figcaption>
+        <figcaption>1 Light Ray (CBbunny.dae)</figcaption>
       </td>
       <td>
         <img src="part3_CBbunny_l4.png" align="middle" width="200px"/>
-        <figcaption>4 Light Rays (example1.dae)</figcaption>
+        <figcaption>4 Light Rays (CBbunny.dae)</figcaption>
       </td>
     </tr>
     <tr align="center">
       <td>
         <img src="part3_CBbunny_l16.png" align="middle" width="200px"/>
-        <figcaption>16 Light Rays (example1.dae)</figcaption>
+        <figcaption>16 Light Rays (CBbunny.dae)</figcaption>
       </td>
       <td>
         <img src="part3_CBbunny_l64.png" align="middle" width="200px"/>
-        <figcaption>64 Light Rays (example1.dae)</figcaption>
+        <figcaption>64 Light Rays (CBbunny.dae)</figcaption>
       </td>
     </tr>
   </table>
