--- a/proj4/index.html
+++ b/proj4/index.html
@@ -92,14 +92,14 @@
       <table style="width:100%">
         <tr align="center">
           <td>
-            <img src="../website/part1_screenshot1.png" align="middle" width="300vw" />
+            <img src="part1_screenshot1.png" align="middle" width="300vw" />
           </td>
           <td>
-            <img src="../website/part1_screenshot2.png" align="middle" width="300vw" />
+            <img src="part1_screenshot2.png" align="middle" width="300vw" />
             <figcaption>Initial configuration ($\text{ks} = 5,000$)</figcaption>
           </td>
           <td>
-            <img src="../website/part1_screenshot3.png" align="middle" width="300vw" />
+            <img src="part1_screenshot3.png" align="middle" width="300vw" />
           </td>
           <td>
         </tr>
@@ -116,19 +116,19 @@
       <table style="width:100%">
         <tr align="center">
           <td>
-            <img src="../website/part1_withoutShearing.png" align="middle" width="500px" />
+            <img src="part1_withoutShearing.png" align="middle" width="500px" />
             <figcaption>No shearing constraints</figcaption>
           </td>
         </tr>
         <tr align="center">
           <td>
-            <img src="../website/part1_withOnlyShearing.png" align="middle" width="500px" />
+            <img src="part1_withOnlyShearing.png" align="middle" width="500px" />
             <figcaption>Only shearing constraints</figcaption>
           </td>
         </tr>
         <tr align="center">
           <td>
-            <img src="../website/part1_screenshot1.png" align="middle" width="500px" />
+            <img src="part1_screenshot1.png" align="middle" width="500px" />
             <figcaption>All constraints</figcaption>
           </td>
         </tr>
@@ -155,13 +155,13 @@
         <table style="width:100%">
           <tr align="center">
             <td>
-            <img src="../website/part2_ks=50.png" align="middle" width="300vw" />
+            <img src="part2_ks=50.png" align="middle" width="300vw" />
               <figcaption>Ks = 50</figcaption>
               <p> </p>
               <figcaption>Very wavy (especially from the center). Seems to be highly flimsy/loose. Already moving around in several wavy motions all over the place in the process of coming down.</figcaption>
             </td>
             <td>
-            <img src="../website/part2_ks=50000.png" align="middle" width="300vw" />
+            <img src="part2_ks=50000.png" align="middle" width="300vw" />
               <figcaption>Ks = 50000</figcaption>
               <p> </p>
               <figcaption>Looks to be more stable. Stays put after slowly coming down. Generally seems more controlled. There is less dip in the middle with a higher spring constant.</figcaption>
@@ -184,13 +184,13 @@
         <table style="width:100%">
           <tr align="center">
             <td>
-              <img src="../website/part2_density=1.png" align="middle" width="400px"/>
+              <img src="part2_density=1.png" align="middle" width="400px"/>
               <figcaption>Density = (1 g/cm^2)</figcaption>
               <p> </p>
               <figcaption>Controlled motion coming down, substantially less motion in comparison to high density. Seems more stable as well.</figcaption>
             </td>
             <td>
-              <img src="../website/part2_density=1000.png" align="middle" width="400px"/>
+              <img src="part2_density=1000.png" align="middle" width="400px"/>
               <figcaption>Density = (1000 g/cm^2)</figcaption>
               <p> </p>
               <figcaption>Middle area jumps around at a fast pace. Wavy motion substantial in the middle while the sides also exhibit multiple wavy motions. </figcaption>
@@ -210,13 +210,13 @@
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="../website/part2_damping=0.05.png" align="middle" width="400px"/>
+        <img src="part2_damping=0.05.png" align="middle" width="400px"/>
         <figcaption>Damping = (0.05%)</figcaption>
         <p> </p>
         <figcaption>The cloth takes longer to come down with a very low damping value. Smooth transition and general shape of the cloth.</figcaption>
        </td>
         <td>
-          <img src="../website/part2_damping=1.png" align="middle" width="400px"/>
+          <img src="part2_damping=1.png" align="middle" width="400px"/>
           <figcaption>Damping = (100%)</figcaption>
           <p> </p>
         <figcaption>The cloth comes down much faster with a higher damping value.</figcaption>
@@ -237,11 +237,11 @@
       <table style="width:100%">
         <tr align="center">
           <td>
-            <img src="../website/part1_defaultHalfway.png" align="middle" width="400vw" />
+            <img src="part1_defaultHalfway.png" align="middle" width="400vw" />
             <figcaption>Default Parameters</figcaption>
           </td>
           <td>
-            <img src="../website/part1_adjustedHalfway.png" align="middle" width="400vw" />
+            <img src="part1_adjustedHalfway.png" align="middle" width="400vw" />
             <figcaption>Adjusted Parameters</figcaption>
           </td>
           <td>
@@ -260,7 +260,7 @@
     </b></blockquote>
 
     <div align="middle">
-      <img src="../website/part2_pinned4resting.png" align="middle" width="100%" />
+      <img src="part2_pinned4resting.png" align="middle" width="100%" />
     </div>
 
 
@@ -277,15 +277,15 @@
       <table style="width:100%">
         <tr align="center">
           <td>
-            <img src="../website/part3_ks_500.png" align="middle" width="300vw" />
+            <img src="part3_ks_500.png" align="middle" width="300vw" />
             <figcaption>$\text{ks} = 500$</figcaption>
           </td>
           <td>
-            <img src="../website/part3_ks_5000.png" align="middle" width="300vw" />
+            <img src="part3_ks_5000.png" align="middle" width="300vw" />
             <figcaption>Initial configuration ($\text{ks} = 5,000$)</figcaption>
           </td>
           <td>
-            <img src="../website/part3_ks_50000.png" align="middle" width="300vw" />
+            <img src="part3_ks_50000.png" align="middle" width="300vw" />
             <figcaption>$\text{ks} = 50,000$</figcaption>
           </td>
           <td>
@@ -310,7 +310,7 @@
     </b></blockquote>
 
     <div align="middle">
-      <img src="../website/part3_plane.png" align="middle" width="100%" />
+      <img src="part3_plane.png" align="middle" width="100%" />
     </div>
 
 
@@ -329,15 +329,15 @@
       <table style="width:100%">
         <tr align="center">
           <td>
-            <img src="../website/part4_start.png" align="middle" width="300vw" />
+            <img src="part4_start.png" align="middle" width="300vw" />
             <figcaption>Self collision 1</figcaption>
           </td>
           <td>
-            <img src="../website/part4_mid.png" align="middle" width="300vw" />
+            <img src="part4_mid.png" align="middle" width="300vw" />
             <figcaption>Self collision 2</figcaption>
           </td>
           <td>
-            <img src="../website/part4_end.png" align="middle" width="300vw" />
+            <img src="part4_end.png" align="middle" width="300vw" />
             <figcaption>Self collision 3</figcaption>
           </td>
           <td>
@@ -356,15 +356,15 @@
       <table style="width:100%">
         <tr align="center">
           <td>
-            <img src="../website/part4_start_vary.png" align="middle" width="300vw" />
+            <img src="part4_start_vary.png" align="middle" width="300vw" />
             <figcaption>Self collision 1: Density = 5, ks = 50000</figcaption>
           </td>
           <td>
-            <img src="../website/part4_mid_vary.png" align="middle" width="300vw" />
+            <img src="part4_mid_vary.png" align="middle" width="300vw" />
             <figcaption>Self collision 2: Density = 5, ks = 50000</figcaption>
           </td>
           <td>
-            <img src="../website/part4_end_vary.png" align="middle" width="300vw" />
+            <img src="part4_end_vary.png" align="middle" width="300vw" />
             <figcaption>Self collision 3: Density = 5, ks = 50000</figcaption>
           </td>
           <td>
@@ -403,22 +403,22 @@
       <table style="width:100%">
         <tr align="center">
           <td>
-              <img src="../website/part5_only_a.png" align="middle" width="400px" />
+              <img src="part5_only_a.png" align="middle" width="400px" />
               <figcaption>Ambient component only</figcaption>
 
           </td>
           <td>
-              <img src="../website/part5_only_d.png" align="middle" width="400px" />
+              <img src="part5_only_d.png" align="middle" width="400px" />
               <figcaption>Diffuse component only</figcaption>
           </td>
         </tr>
         <tr align="center">
           <td>
-              <img src="../website/part5_only_s.png" align="middle" width="400px" />
+              <img src="part5_only_s.png" align="middle" width="400px" />
               <figcaption>Specular component only</figcaption>
           </td>
           <td>
-              <img src="../website/part5_only_entire.png" align="middle" width="400px" />
+              <img src="part5_only_entire.png" align="middle" width="400px" />
               <figcaption>Complete Blinn-Phong model</figcaption>
           </td>
         </tr>
@@ -431,7 +431,7 @@
     </b></blockquote>
 
     <div align="middle">
-      <img src="../website/part5_own_texture.png" align="middle" width="100%" />
+      <img src="part5_own_texture.png" align="middle" width="100%" />
     </div>
 
 
@@ -449,22 +449,22 @@
       <table style="width:100%">
         <tr align="center">
           <td>
-            <img src="../website/part5_bumpSphere.png" align="middle" width="400vw" />
+            <img src="part5_bumpSphere.png" align="middle" width="400vw" />
             <figcaption>Default Bump on Sphere</figcaption>
           </td>
           <td>
-            <img src="../website/part5_displacementSphere.png" align="middle" width="400vw" />
+            <img src="part5_displacementSphere.png" align="middle" width="400vw" />
             <figcaption>Default Displacement on Sphere</figcaption>
           </td>
           <td>
         </tr>
         <tr align="center">
           <td>
-            <img src="../website/part5_bump_on_cloth.png" align="middle" width="400vw" />
+            <img src="part5_bump_on_cloth.png" align="middle" width="400vw" />
             <figcaption>Default Bump on Cloth</figcaption>
           </td>
           <td>
-            <img src="../website/part5_displacementCloth.png" align="middle" width="400vw" />
+            <img src="part5_displacementCloth.png" align="middle" width="400vw" />
             <figcaption>Default Displacement on Cloth</figcaption>
           </td>
           <td>
@@ -480,22 +480,22 @@
       <table style="width:100%">
         <tr align="center">
           <td>
-            <img src="../website/part5_bump_16.png" align="middle" width="400vw" />
+            <img src="part5_bump_16.png" align="middle" width="400vw" />
             <figcaption>Bump Mapping (-o 16 -a 16)</figcaption>
           </td>
           <td>
-            <img src="../website/part5_displace_16.png" align="middle" width="400vw" />
+            <img src="part5_displace_16.png" align="middle" width="400vw" />
             <figcaption>Displacement Mapping (-o 16 -a 16)</figcaption>
           </td>
           <td>
         </tr>
         <tr align="center">
           <td>
-            <img src="../website/part5_bump_128.png" align="middle" width="400vw" />
+            <img src="part5_bump_128.png" align="middle" width="400vw" />
             <figcaption>Bump Mapping (-o 128 -a 128)</figcaption>
           </td>
           <td>
-            <img src="../website/part5_displace_128.png" align="middle" width="400vw" />
+            <img src="part5_displace_128.png" align="middle" width="400vw" />
             <figcaption>Displacement Mapping (-o 128 -a 128)</figcaption>
           </td>
           <td>
@@ -520,11 +520,11 @@
       <table style="width:100%">
         <tr align="center">
           <td>
-            <img src="../website/part5_mirror_16.png" align="middle" width="400vw" />
+            <img src="part5_mirror_16.png" align="middle" width="400vw" />
             <figcaption>Mirror Shader on the Cloth</figcaption>
           </td>
           <td>
-            <img src="../website/part5_mirror_sphere.png" align="middle" width="400vw" />
+            <img src="part5_mirror_sphere.png" align="middle" width="400vw" />
             <figcaption>Mirror Shader on the Sphere</figcaption>
           </td>
           <td>
