--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		<a href="/proj4/index.html">Project 4</a>
 		<br><br>
 		<a href="/finalprojectindex.html">Final Project</a>
+		<br><br>
+		<a href="/finalprojectMileStone.html">Final Project Milestone</a>
 
 	</body>
 	<script>
