--- a/finalprojectMileStone.html
+++ b/finalprojectMileStone.html
@@ -144,7 +144,7 @@
 <ul style=“list-style-type:square”>
 
 <li> 
-  <link href="https://docs.google.com/presentation/d/1ssiD3Xr1OB7GeMGoqhXFSb0sFSnev5C6LzcgM5a_Q_M/edit?usp=sharing" rel="stylesheet">
+    <a href="https://docs.google.com/presentation/d/1ssiD3Xr1OB7GeMGoqhXFSb0sFSnev5C6LzcgM5a_Q_M/edit?usp=sharing">Presentation</a>
 </ul>
 </p>
 
@@ -159,11 +159,9 @@
 <ul style=“list-style-type:square”>
 
 <li> 
-  <link href="https://www.youtube.com/watch?v=YfolVBo_2-I" rel="stylesheet">
+  <a href="https://www.youtube.com/watch?v=YfolVBo_2-I">(Clean Dust Example Video)</a>
 </ul>
-</p>
-  (Clean Dust Example Video) 
-<p>
+
 </p>
 
 </body>
