--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 		<a href="/finalprojectindex.html">Final Project</a>
 		<br><br>
 		<a href="/finalprojectMileStone.html">Final Project Milestone</a>
+		<br><br>
+		<a href="/finalprojectReport.html">Final Report</a>
+
 
 	</body>
 	<script>
