--- a/finalprojectReport.html
+++ b/finalprojectReport.html
@@ -162,34 +162,34 @@
               <table style="width:100%">
                 <tr align="center">
                   <td>
-                    <img src="NAME.png" align="middle" width="400px"/>
+                    <img src="Frontview_100.png" align="middle" width="400px"/>
                     <figcaption>100% Front Side</figcaption>
                   </td>
 
                   <td>
-                    <img src="NAME.png" align="middle" width="400px"/>
+                    <img src="Backview_100.png" align="middle" width="400px"/>
                     <figcaption>100% Back Side</figcaption>
                   </td>
                 </tr>
 
                 <tr align="center">
                   <td>
-                    <img src="NAME.png" align="middle" width="400px"/>
-                    <figcaption>50% Front Side</figcaption>
+                    <img src="Frontview_52.png" align="middle" width="400px"/>
+                    <figcaption>52% Front Side</figcaption>
                   </td>
                 </tr>
 
                 <tr align="center">
                   <td>
-                    <img src="NAME.png" align="middle" width="400px"/>
-                    <figcaption>25% Back Side</figcaption>
+                    <img src="Backview_7.png" align="middle" width="400px"/>
+                    <figcaption>7% Back Side</figcaption>
                   </td>
                 </tr>
 
                 <tr align="center">
                   <td>
-                    <img src="NAME.png" align="middle" width="400px"/>
-                    <figcaption>0% Total</figcaption>
+                    <img src="Backview_2.png" align="middle" width="400px"/>
+                    <figcaption>2% Total</figcaption>
                   </td>
                 </tr>
 
