--- a/finalprojectReport.html
+++ b/finalprojectReport.html
@@ -206,9 +206,13 @@
 </ul>
 </p>
 
-
+<video width="320" height="240" autoplay muted>
+  <source src="CS184-FinalProject-Video.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
 
 <h2 align="middle">Resources</h2>
+
 <p>
     RESOURCES
 </p>
